// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagesList renders empty 1`] = `
<Screen
  navBarColor="green"
  navBarStyle="dark"
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "New Page",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "pages.list.add.button",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  subtitle="Learn React Native"
  title="Pages"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FlatList
      ListEmptyComponent={
        <ListEmptyComponent
          title="There are no pages to display."
        />
      }
      data={Array []}
      extraData={
        Object {
          "pages": Array [],
          "selectedPageURL": null,
          "windowTraits": Object {
            "horizontal": "compact",
            "vertical": "regular",
          },
        }
      }
      keyExtractor={[Function]}
      onRefresh={[Function]}
      refreshing={false}
      renderItem={[Function]}
      testID="pages.list.list"
    />
  </View>
</Screen>
`;

exports[`PagesList renders loading 1`] = `
<Screen
  navBarColor="green"
  navBarStyle="dark"
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "New Page",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/Add.png",
        },
        "testID": "pages.list.add.button",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="Pages"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FlatList
      ListEmptyComponent={null}
      data={Array []}
      extraData={
        Object {
          "pages": Array [],
          "selectedPageURL": null,
          "windowTraits": Object {
            "horizontal": "compact",
            "vertical": "regular",
          },
        }
      }
      keyExtractor={[Function]}
      onRefresh={[Function]}
      refreshing={true}
      renderItem={[Function]}
      testID="pages.list.list"
    />
  </View>
</Screen>
`;

exports[`PagesList shows access icon for teachers 1`] = `
<View
  style={
    Object {
      "alignSelf": "flex-start",
    }
  }
>
  <AccessIcon
    disableAppSpecificChecks={false}
    entry={
      Object {
        "body": "<p>Hello, World!</p>",
        "created_at": "2017-03-17T19:15:25Z",
        "editing_roles": "teachers",
        "front_page": false,
        "hide_from_students": false,
        "html_url": "/pages/page-1",
        "page_id": "1",
        "published": true,
        "title": "Page 1",
        "updated_at": "2017-03-17T19:15:25Z",
        "url": "page-1",
      }
    }
    image={
      Object {
        "testUri": "../../../src/images/course/Pages.png",
      }
    }
    showAccessIcon={true}
    tintColor="green"
  />
</View>
`;
